fix: Dark mode in travel agency page

--- a/src/output.css
+++ b/src/output.css
@@ -1683,6 +1683,10 @@ input:checked + .toggle-bg {
   width: 50%;
 }
 
+.w-1\/4 {
+  width: 25%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -1792,14 +1796,6 @@ input:checked + .toggle-bg {
   width: 100vw;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
 .min-w-\[calc\(100\%\/3\)\] {
   min-width: calc(100% / 3);
 }
@@ -1814,10 +1810,6 @@ input:checked + .toggle-bg {
 
 .max-w-4xl {
   max-width: 56rem;
-}
-
-.max-w-5xl {
-  max-width: 64rem;
 }
 
 .max-w-6xl {
@@ -2086,10 +2078,6 @@ input:checked + .toggle-bg {
 
 .items-center {
   align-items: center;
-}
-
-.items-stretch {
-  align-items: stretch;
 }
 
 .justify-start {
@@ -2416,6 +2404,11 @@ input:checked + .toggle-bg {
   border-style: dashed;
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .border-blue-600 {
   --tw-border-opacity: 1;
   border-color: rgb(28 100 242 / var(--tw-border-opacity));
@@ -2472,13 +2465,17 @@ input:checked + .toggle-bg {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+.bg-\[\#009951\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 153 81 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#A186714D\] {
   background-color: #A186714D;
+}
+
+.bg-\[\#a1867159\] {
+  background-color: #a1867159;
 }
 
 .bg-\[hsla\(0\2c 0\%\2c 0\%\2c 0\.30\)\] {
@@ -2657,19 +2654,6 @@ input:checked + .toggle-bg {
 .bg-yellow-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(159 88 10 / var(--tw-bg-opacity));
-}
-
-.bg-\[a1867159\] {
-  background-color: a1867159;
-}
-
-.bg-\[\#a1867159\] {
-  background-color: #a1867159;
-}
-
-.bg-\[\#009951\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 153 81 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -4182,6 +4166,11 @@ input:checked + .toggle-bg {
 
 :is(.dark .dark\:border-transparent) {
   border-color: transparent;
+}
+
+:is(.dark .dark\:border-white) {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 :is(.dark .dark\:border-white\/20) {
